syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package profile.proto.v2;

option go_package = "profile/proto/v2;transaction";

message Transaction {
  int64 account_id = 1;
  int64 receiver = 2;
  double value = 3;
  string status = 4;

}

message ListTransaction {
  repeated Transaction transactions = 1;
  google.protobuf.Timestamp CreatedAt = 2;
  google.protobuf.Timestamp UpdatedAt = 3;
}

message TransactionRequest {
  int64 transaction_id = 1;
}

message ListTransactionRequest {
  repeated int64 transaction_id = 1;
}

service TransactionService {
  rpc CreateTransaction(Transaction) returns (google.protobuf.Empty) {
  }

  rpc FindTransaction(TransactionRequest) returns (Transaction) {
  }

  rpc ListTransactions(ListTransactionRequest) returns (ListTransaction) {
  }

}